[project]
name = "tic-tac-toe-rl"
version = "0.1.0"
description = "training tic-tac-toe agent with RL"
authors = [
    {name = "blackccpie",email = "16404298+blackccpie@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium (>=1.2.1,<2.0.0)",
    "stable-baselines3 (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
