[project]
name = "tic-tac-toe-rl"
version = "0.1.0"
description = "training tic-tac-toe agent with RL"
authors = [
    {name = "blackccpie",email = "16404298+blackccpie@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "stable-baselines3>=2",
]
